--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -31,3 +31,18 @@ body{
 .bg-light {
     background-color: #dbb08d !important;
 }
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
+.table .thead-dark th{
+    color:floralwhite;
+    background-color:#6E3F19
+}
+tr:hover {background-color:#dbb08db0 !important}
+.card-header {
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 0;
+    background-color:#6E3F19 !important;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  }
